--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
     "coc": ">= 0.0.70"
   },
   "dependencies": {
-    "coc.nvim": "^0.0.77",
+    "coc.nvim": ">= 0.0.70",
     "lodash.camelcase": "^4.3.0",
     "vscode-languageserver-protocol": "^3.15.3",
     "vscode-languageserver-textdocument": "^1.0.1"
   },
   "devDependencies": {
     "@types/lodash.camelcase": "^4.3.6",
-    "@types/node": "^13.11.1",
-    "@types/react": "^16.9.34",
+    "@types/node": "^14.14.0",
+    "@types/react": "^16.9.53",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^4.0.3"
   },
   "contributes": {
     "configuration": {
