--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "rimraf dist",
     "format-md": "prettier --write \"*.md\"",
     "format-src": "prettier --write \"src/**/*.{md,ts,tsx}\"",
-    "tag-version": "git tag -a v$npm_package_version -m 'v$npm_package_version';git push --tags",
+    "tag-version": "standard-version",
     "format": "npm-run-all format-md format-src",
     "prepublishOnly": "npm-run-all build tag-version",
     "build": "tsc -p tsconfig.build.json"
@@ -41,6 +41,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
+    "standard-version": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "contributes": {
